# rust-tg.jpg

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  fly.toml
src/: main.rs
