[package]
name = "tgjpg-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.11", features = ["macros", "auto-send"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
regex = "1.11.1"
url = "2.5.4"
reqwest = "0.12.9"
anyhow = "1.0.94"
scraper = "0.22.0"
base64 = "0.22.1"
